[gd_scene load_steps=8 format=3 uid="uid://d2dulgpycwl2c"]

[ext_resource type="Script" uid="uid://bt63qu8ldpxxu" path="res://scripts/hud.gd" id="1_ahhtf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahhtf"]
bg_color = Color(0.945098, 0.380392, 0.501961, 0.403922)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.945098, 0.380392, 0.501961, 0.623529)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oo0fn"]
size = Vector2(1008, 121)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trtic"]
bg_color = Color(0.945098, 0.380392, 0.501961, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.396078, 0.396078, 0.396078, 0.458824)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trtic"]
size = Vector2(119, 1006)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_toqtt"]
size = Vector2(120, 1006)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahhtf"]
size = Vector2(1008, 111)

[node name="HUD" type="CanvasLayer"]
layer = 3
script = ExtResource("1_ahhtf")

[node name="BottomPanelAreaDown" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1810, 0)
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="BottomPanelAreaDown"]
offset_left = -1350.0
offset_top = 997.0
offset_right = -340.0
offset_bottom = 1043.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ahhtf")

[node name="Label" type="Label" parent="BottomPanelAreaDown/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.13322, 0.542878)
theme_override_constants/line_spacing = -27
theme_override_font_sizes/font_size = 25
text = "v

v

v"

[node name="PanelHitbox" type="CollisionShape2D" parent="BottomPanelAreaDown"]
z_index = 9
position = Vector2(-845, 1019.5)
shape = SubResource("RectangleShape2D_oo0fn")

[node name="LeftPanelArea" type="Area2D" parent="."]
unique_name_in_owner = true
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="LeftPanelArea"]
offset_left = 35.0
offset_top = 164.0
offset_right = 81.0
offset_bottom = 916.0
theme_override_styles/panel = SubResource("StyleBoxFlat_trtic")

[node name="Label" type="Label" parent="LeftPanelArea/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -17.0
offset_right = 28.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "<<"

[node name="PanelHitbox" type="CollisionShape2D" parent="LeftPanelArea"]
unique_name_in_owner = true
z_index = 9
position = Vector2(59.5, 540)
shape = SubResource("RectangleShape2D_trtic")

[node name="RightPanelArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1810, 0)
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="RightPanelArea"]
offset_left = 35.0
offset_top = 164.0
offset_right = 81.0
offset_bottom = 916.0
theme_override_styles/panel = SubResource("StyleBoxFlat_trtic")

[node name="Label" type="Label" parent="RightPanelArea/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -17.0
offset_right = 28.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = ">>"

[node name="PanelHitbox" type="CollisionShape2D" parent="RightPanelArea"]
z_index = 9
position = Vector2(50, 540)
shape = SubResource("RectangleShape2D_toqtt")

[node name="BottomPanelArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1810, 0)
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="BottomPanelArea"]
offset_left = -1350.0
offset_top = 997.0
offset_right = -340.0
offset_bottom = 1043.0
theme_override_styles/panel = SubResource("StyleBoxFlat_trtic")

[node name="Label" type="Label" parent="BottomPanelArea/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -12.0
offset_right = 28.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.13322, 0.542878)
theme_override_constants/line_spacing = -25
theme_override_font_sizes/font_size = 25
text = "^
^
^"

[node name="PanelHitbox" type="CollisionShape2D" parent="BottomPanelArea"]
z_index = 9
position = Vector2(-845, 1025.5)
shape = SubResource("RectangleShape2D_ahhtf")

[node name="SleepNotification" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 24.0
offset_top = 1038.0
offset_right = 364.0
offset_bottom = 1061.0
theme_override_colors/font_color = Color(1, 1, 1, 0.462745)
text = "Assignments done, you can go to sleep now!"

[connection signal="mouse_entered" from="BottomPanelAreaDown" to="." method="_on_bottom_panel_area_down_mouse_entered"]
[connection signal="mouse_entered" from="LeftPanelArea" to="." method="_on_left_panel_area_mouse_entered"]
[connection signal="mouse_entered" from="RightPanelArea" to="." method="_on_right_panel_area_mouse_entered"]
[connection signal="mouse_entered" from="BottomPanelArea" to="." method="_on_bottom_panel_area_mouse_entered"]
